<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.openstack.magic.Planechase">

    <RelativeLayout
        android:layout_width="268dp"
        android:layout_height="192dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/effect"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/plane_art"
            android:layout_width="268dp"
            android:layout_height="192dp"
            app:srcCompat="@drawable/plane_minamo" />

        <ImageView
            android:id="@+id/shine"
            android:layout_width="200dp"
            android:layout_marginLeft="-100dp"
            android:layout_height="192dp"
            android:src="@drawable/shine_effect" />
    </RelativeLayout>

    <Button
        android:id="@+id/roll_button"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="roll_button"
        android:text="@string/roll"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chaos"
        app:layout_constraintVertical_bias="0.703" />

    <Button
        android:id="@+id/planeswalk_button"
        android:layout_width="170dp"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="randomize_plane"
        android:text="@string/planeswalk"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/roll_button"
        app:layout_constraintTop_toBottomOf="@+id/chaos"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/effect"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:background="@drawable/title_bar"
        android:padding="8dp"
        android:text="@string/default_effect_plan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498" />

    <TextView
        android:id="@+id/chaos"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/title_bar"
        android:padding="8dp"
        android:text="@string/default_chaos_plan"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/effect"
        app:layout_constraintVertical_bias="0.257" />

    <TextView
        android:id="@+id/plane_title"
        android:layout_width="360dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/title_bar"
        android:text="@string/default_title_plan"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/chaos_icon"
        android:layout_width="44dp"
        android:layout_height="34dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.628"
        app:srcCompat="@drawable/chaos_icon" />
</android.support.constraint.ConstraintLayout>
