<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.openstack.magic.MainActivity">

    <Button
        android:id="@+id/pinata_button"
        android:layout_width="210dp"
        android:layout_height="56dp"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="PinataGame"
        android:text="@string/pinata"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/language"
        app:layout_constraintVertical_bias="0.06" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="321dp"
        android:layout_height="247dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/planechase_button"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="PlanechaseGame"
        android:text="@string/planechase"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pinata_button"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/help"
        android:layout_width="210dp"
        android:layout_height="52dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/button_2"
        android:text="@string/help"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/language"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/brazil_flag"
        android:onClick="Set_Language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

</android.support.constraint.ConstraintLayout>
