<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.example.openstack.magic.Planechase_Roll">

    <TextView
        android:id="@+id/mana_cost"
        android:layout_width="240dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="@string/roll_costs"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/card6"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_back"
        android:onClick="get_button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card5"
        app:layout_constraintTop_toBottomOf="@+id/card3" />

    <Button
        android:id="@+id/card5"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_back"
        android:onClick="get_button5"
        app:layout_constraintEnd_toStartOf="@+id/card6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card4"
        app:layout_constraintTop_toBottomOf="@+id/card2" />

    <Button
        android:id="@+id/card4"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/card_back"
        android:onClick="get_button4"
        app:layout_constraintEnd_toStartOf="@+id/card5"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card1" />

    <Button
        android:id="@+id/card2"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_back"
        android:onClick="get_button2"
        app:layout_constraintEnd_toStartOf="@+id/card3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toBottomOf="@+id/mana_cost" />

    <Button
        android:id="@+id/card3"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_back"
        android:onClick="get_button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/card2"
        app:layout_constraintTop_toBottomOf="@+id/mana_cost" />

    <Button
        android:id="@+id/card1"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/card_back"
        android:onClick="get_button1"
        app:layout_constraintEnd_toStartOf="@+id/card2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mana_cost" />

    <Button
        android:id="@+id/reroll_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="184dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="reroll_cleanup"
        android:text="@string/Reroll"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card5"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/ok_button"
        android:layout_width="170dp"
        android:layout_height="60dp"
        android:layout_marginBottom="52dp"
        android:layout_marginEnd="104dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_2"
        android:onClick="ok_roll_button"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card5"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
